# SimpleRestaurantApi

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/postgresql/: entrypoint.sql
domain/: Cargo.toml
domain/src/: item.rs
migrations/: 202308211724_create_tbl_item.sql
persistence/: Cargo.toml
persistence/src/: dao.rs  error.rs  item_repository.rs  lib.rs  postgres_item_repository.rs  postgres_repositories.rs  repositories.rs
server/: Cargo.toml
server/src/: dto.rs  errors.rs  handlers.rs  lib.rs  main.rs
