[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "^0.7", features = ["postgres", "runtime-tokio", "chrono"] }
chrono = "^0.4"
async-trait = "^0.1"
derive-new = "^0.5"
derive_more = "^0.99"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
serial_test = "0.6.0"
