[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
persistence = { path = "../persistence" }
actix-web = "^4"
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
env_logger = "^0.9"
log = "^0.4"
derive-new = "^0.5"
derive_more = "^0.99"

[dev-dependencies]
serial_test = "0.6.0"
